--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,18 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&family=VT323&display=swap');
+
+
+
 :root {
     /* ===== Colors ===== */
-    --color-background: #DADDE2;
-    --color-surface: #F5F6F8;
+    --color-background: #F1F3F6;
+    --color-surface: #FFFFFF;
 
     --color-text-primary: #1F2937;
-    --color-text-secondary: #4B5563;
+    --color-text-secondary: #6B7280;
 
-    --color-border: #BFC6D1;
+    --color-border: #E5E7EB;
 
-    --color-primary: #1D4ED8;
-    --color-primary-hover: #1E40AF;
+    --color-primary: #374151;
+    --color-primary-hover: #111827;
 
-    --color-accent: #9F1239;
-    --color-danger: #9F1239;
+    --color-accent: #BE123C;
+    --color-danger: #B91C1C;
+
+
 
     /* ===== Font Sizes ===== */
     --font-size-xs: 0.75rem;
@@ -37,6 +43,8 @@
 
 body {
     background-color: var(--color-background);
+    font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 
 h1 {
@@ -55,20 +63,30 @@ p {
     color: var(--color-text-primary);
 }
 
+i {
+    padding: 0 8px;
+}
+
 button {
-    background: var(--color-primary);
-    color: var(--color-surface);
+    background-color: var(--color-primary);
+    color: white;
+    padding: 10px 16px;
 
 }
 
 button:hover {
-    background: var(--color-primary-hover);
+    background-color: var(--color-primary-hover);
+}
+
+.badge {
+    background-color: var(--color-accent);
+    color: white;
 }
 
 
-nav {
+.nav-bar {
 
-    background: transparent;
+    background-color: var(--color-surface);
     border-bottom: var(--color-border);
 }
 
@@ -82,17 +100,12 @@ nav ul {
 }
 
 nav ul li {
-    color: var(--color-text-primary);
+    color: var(--color-text-secondary);
 }
 
 .headliner {
 
     border-radius: var(--radius-sm);
-
-    background-image: url(/assets/images/headlinerimgs.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
 
 }
 
@@ -122,32 +135,38 @@ footer p {
 }
 
 /* slide section */
-.slider {
+.caraousel {
     width: 100%;
-    overflow: hidden;
+    overflow-x: auto;
+    flex-wrap: nowrap;
 
 }
 
 
-.slides {
-    display: flex;
+.group {
+    flex-shrink: 0;
     width: max-content;
-    animation: move 120s linear infinite;
+    gap: 10em;
+    animation: move 40s infinite linear;
+    padding-right: 1em;
 }
 
-.slides img {
-    width: 400px;
-    height: 250px;
-    object-fit: cover;
+.group img {
+    flex: 0 0 5em;
+    height: 200px;
+    width: auto;
+    object-fit: scale-down;
+
     flex-shrink: 0;
 }
 
+
 @keyframes move {
     from {
-        transform: translateX(0);
+        translate: 0;
     }
 
     to {
-        transform: translateX(-50%);
+        translate: -100%;
     }
 }
